[gd_scene load_steps=17 format=3 uid="uid://568yhxw8244e"]

[ext_resource type="Script" uid="uid://cfs7soygm4bfi" path="res://asteroid/asteroid.gd" id="1_84fqd"]
[ext_resource type="Texture2D" uid="uid://cfuhbjpnjawmr" path="res://art/256px/Asteroid 01_png_processed.png" id="2_7gw88"]
[ext_resource type="Texture2D" uid="uid://d28vrg413bfby" path="res://art/256px/Asteroid 02_png_processed.png" id="3_snmap"]
[ext_resource type="Texture2D" uid="uid://bceflidj8mavn" path="res://art/256px/Asteroid 03_png_processed.png" id="4_k5a7f"]
[ext_resource type="Texture2D" uid="uid://o1bmhnquw0og" path="res://art/256px/Asteroid 04_png_processed.png" id="5_cyn6k"]
[ext_resource type="Texture2D" uid="uid://berdanpfpt32j" path="res://art/256px/Explosion01_Frame_01_png_processed.png" id="6_oasy2"]
[ext_resource type="Texture2D" uid="uid://cmwjl5oeo2ri4" path="res://art/256px/Explosion01_Frame_02_png_processed.png" id="7_1svxc"]
[ext_resource type="Texture2D" uid="uid://ctjqyk5tfx6ma" path="res://art/256px/Explosion01_Frame_03_png_processed.png" id="8_bynao"]
[ext_resource type="Texture2D" uid="uid://b28nxn6m153iv" path="res://art/256px/Explosion01_Frame_04_png_processed.png" id="9_pxtrm"]
[ext_resource type="Texture2D" uid="uid://ba2igmnckofj2" path="res://art/256px/Explosion01_Frame_05_png_processed.png" id="10_08vea"]
[ext_resource type="Texture2D" uid="uid://bh4bsfh1hj0ae" path="res://art/256px/Explosion01_Frame_06_png_processed.png" id="11_ws6px"]
[ext_resource type="Texture2D" uid="uid://dg5x26ly3nmu0" path="res://art/256px/Explosion01_Frame_07_png_processed.png" id="12_j4mj3"]
[ext_resource type="Texture2D" uid="uid://e50e4v1jvff6" path="res://art/256px/Explosion01_Frame_08_png_processed.png" id="13_knmvf"]
[ext_resource type="Texture2D" uid="uid://uvfeh4ycmdsc" path="res://art/256px/Explosion01_Frame_09_png_processed.png" id="14_nqmp7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oasy2"]
radius = 5.0

[sub_resource type="SpriteFrames" id="SpriteFrames_vsy7k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_oasy2")
}, {
"duration": 1.0,
"texture": ExtResource("7_1svxc")
}, {
"duration": 1.0,
"texture": ExtResource("8_bynao")
}, {
"duration": 1.0,
"texture": ExtResource("9_pxtrm")
}, {
"duration": 1.0,
"texture": ExtResource("10_08vea")
}, {
"duration": 1.0,
"texture": ExtResource("11_ws6px")
}, {
"duration": 1.0,
"texture": ExtResource("12_j4mj3")
}, {
"duration": 1.0,
"texture": ExtResource("13_knmvf")
}, {
"duration": 1.0,
"texture": ExtResource("14_nqmp7")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[node name="asteroid" type="Area2D" groups=["asteroids"]]
collision_layer = 2
script = ExtResource("1_84fqd")
asteroid_sprites = Array[Texture2D]([ExtResource("2_7gw88"), ExtResource("3_snmap"), ExtResource("4_k5a7f"), ExtResource("5_cyn6k")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oasy2")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Explosion" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vsy7k")
frame = 8
frame_progress = 1.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_explosion_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
